# libpicomodel

./: CMakeLists.txt  README.md
picomodel/: picointernal.c  pm_ms3d.c  pm_obj.c
picomodel/lwo/: lwio.c  lwo2.c  lwob.c
src/: CMakeLists.txt  globaldefs.h  picomodel.h  pm_mdl.c
tests/: CMakeLists.txt  main.cpp  picomodel_tests.cpp  pm_ase_tests.cpp  pm_md3_tests.cpp  pm_mdc_tests.cpp  pm_mdl_tests.cpp  pm_obj_tests.cpp  pm_tests.cpp  utils.h
tests/assets/: model.ase  model.md3  model.mdc  model.mdl
